Try to make .modal-header honor align-items: center;, fixed/remove debug

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -170,7 +170,7 @@
 
 .modal-header,
 .modal-footer {
-  background: red;
+  background: $light;
   align-items: center;
 }
 
